force-app/main/default/objects/bt_stripe__Stripe_Metadata_Mapping__mdt/bt_stripe__Stripe_Metadata_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Stripe Metadata Mapping</label>
    <pluralLabel>Stripe Metadata Mappings</pluralLabel>
</CustomObject>