force-app/main/default/objects/bt_stripe__Stripe_Metadata_Mapping__mdt/fields/bt_stripe__Metadata_Key__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Metadata_Key__c</fullName>
    <label>Metadata Key</label>
    <length>40</length>
    <type>Text</type>
</CustomField>