force-app/main/default/objects/bt_stripe__Stripe_Metadata_Mapping__mdt/fields/bt_stripe__Source_Field__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Source_Field__c</fullName>
    <label>Source Field</label>
    <metadataRelationshipControllingField>bt_stripe__Stripe_Metadata_Mapping__mdt.bt_stripe__Source_Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Stripe_Metadata_Mappings</relationshipLabel>
    <relationshipName>Stripe_Metadata_Mappings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>