force-app/main/default/objects/bt_stripe__Stripe_Metadata_Mapping__mdt/fields/bt_stripe__Source_Object__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Source_Object__c</fullName>
    <label>Source Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Stripe Metadata Mappings</relationshipLabel>
    <relationshipName>Stripe_Metadata_Mappings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>