force-app/main/default/objects/bt_stripe__Stripe_Metadata_Mapping__mdt/listViews/bt_stripe__All.listView-meta.xml
<ListView>
    <fullName>bt_stripe__All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>bt_stripe__Metadata_Key__c</columns>
    <columns>bt_stripe__Source_Object__c</columns>
    <columns>bt_stripe__Source_Field__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>